--- a/src/site.css
+++ b/src/site.css
@@ -11,7 +11,7 @@ html {
     background-repeat: no-repeat;
     background-position: center;
 
-    height: 10vh;
+    height: 25vh;
     border: black 10px solid;
 }
 
@@ -26,16 +26,9 @@ html {
     border: black 10px solid;
 }
 
-p {
-    font-size: 1.5em;
-    font-family: 'Courier New', monospace;
-    text-align: justify;
-
-}
-
 main {
     background: lightyellow;
-    border-radius: 1%;
+    border-radius: 0.7em;
     border: black 10px solid;
     padding-left: 1%;
     padding-right: 1%;
@@ -43,12 +36,12 @@ main {
 
 aside {
     background: lightblue;
-    border-radius: 1%;
+    border-radius: 0.7em;
 }
 
 header {
-    background: lightpink;
-    border-radius: 1%;
+    background: lightseagreen;
+    border-radius: 0.7em;
     display: flex;
     flex-direction: column;
     border: aqua 10px solid;
@@ -58,7 +51,13 @@ h1 {
     border: black 10px solid;
     display: flex;
     justify-content: center;
+    font-size: xxx-large;
 }
 
 
+p {
+    font-size: large;
+    text-align: justify;
+
+}
 
