--- a/src/site.css
+++ b/src/site.css
@@ -14,6 +14,35 @@ html, main, header, section, section > header, footer, h1, nav {
 
 }
 
+
+.p-tabmenu {
+    display: table-row;
+    padding: 10px;
+    margin: 10px;
+}
+
+.p-tabmenuitem {
+
+    display: table-cell;
+    padding: 0;
+    margin: 5px;
+    width: 20%;
+    min-width: 150px;
+    min-height: 50px;
+
+    border: 1px dotted black;
+}
+
+
+nav {
+    display: table;
+    padding: 0;
+    width: 100%;
+    border: 3px dotted black;
+}
+
+
+/* */
 .navdiv {
     border-bottom: 1px solid black;
 }
@@ -80,18 +109,7 @@ footer, header {
     padding-top: 10px;
 }
 
-nav {
 
-    top: 0;
-    padding: 0;
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    justify-content: space-around;
-    gap: 10%;
-}
 
 main {
     padding: 0;
