--- a/src/site.css
+++ b/src/site.css
@@ -47,30 +47,56 @@ nav {
     border-bottom: 1px solid black;
 }
 
+
+.linksection {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow-wrap: anywhere;
+
+}
+
 .linkdiv {
     padding: 1%;
     margin: 1%;
     border-radius: 0.5em;
     background: whitesmoke;
+    flex-basis: 48%;
+    min-width: 200px;
 }
 
 .linkheader {
     margin-left: 1%;
     margin-right: 0;
 
-    display: flex;
-    flex-direction: row;
+    /*flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    overflow: clip;*/
 }
+
+.linktext {
+    margin: 0;
+    padding: 5% 1% 1% 1%;
+    font-size: large;
+    font-weight: bold;
+    border: solid 1px black;
+}
+
+
+
+/**/
+
 
 .linkdiv, .floatdiv, header, footer {
     border: 1px solid black;
+
 }
 
-main, aside, header, section, section > header, footer, nav  {
-    border-radius: 0.7em;
+main, aside, header, section, section > header, footer, nav, .floatdiv  {
+    border-radius: 0.2em;
 }
 
 footer, header {
@@ -80,7 +106,6 @@ footer, header {
 footer, header {
     padding: 1%;
     margin: 1%;
-    border-radius: 0.35em;
 }
 
 .p-tabmenu-nav {
@@ -99,7 +124,6 @@ footer, header {
 .floatdiv {
     padding: 2%;
     margin: 1%;
-    border-radius: 0.5em;
 }
 
 .navdiv {
@@ -181,4 +205,19 @@ p {
     flex-direction: column;
     flex-basis: 1000px;
     min-height: 200px;
+}
+
+@media screen and (max-width: 500px) {
+    h1 {
+        font-size: large;
+    }
+    h2 {
+        font-size: small;
+    }
+    p {
+        font-size: small !important;
+    }
+    .linkdiv {
+        flex-basis: 98%;
+    }
 }
