--- a/src/site.css
+++ b/src/site.css
@@ -101,11 +101,9 @@ nav {
 
 
 
-
-
 .linktext {
     margin: 5% 0 0 0;
-    padding: 1% 3% 1% 3%;
+    padding: 3%;
     font-size: large;
     font-weight: bold;
     border: solid 1px black;
